--- a/giphyspring/src/main/resources/application.properties
+++ b/giphyspring/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-giphy.url=${GIPHY_API_URL}
-giphy.api.key=${GIPHY_API_KEY}
+# giphy.url=${GIPHY_API_URL}
+# giphy.api.key=${GIPHY_API_KEY}
+
+giphy.url=https://api.giphy.com/v1/gifs/search
+giphy.api.key=4g2lbaG2J7v7UljEeUAW5pGhYRr7Y5kG
